Initial working implementation generation